--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -46,6 +46,30 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
+  /*
+  ---break---
+*/
+  @keyframes accordion-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-accordion-content-height);
+    }
+  }
+  /*
+  ---break---
+*/
+  @keyframes accordion-up {
+    from {
+      height: var(--radix-accordion-content-height);
+    }
+    to {
+      height: 0;
+    }
+  }
 }
 
 /*
@@ -118,6 +142,7 @@
   body {
     @apply bg-background text-foreground;
   }
+
 }
 
 @layer base {
@@ -128,4 +153,36 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@theme {
+  --animate-scroll: marquee 120s forwards linear infinite;
+
+  @keyframes marquee {
+    to {
+      transform: translate(calc(-50% - 0.5rem))
+    }
+  }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-background bg-primary/50; 
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-background bg-primary/40;
 }
